--- a/src/app/main/register/register.component.html
+++ b/src/app/main/register/register.component.html
@@ -10,7 +10,7 @@
 
             <div class="title">CREATE AN ACCOUNT</div>
 
-            <form name="registerForm" [formGroup]="registerForm" novalidate>
+            <form name="registerForm" [formGroup]="registerForm" novalidate (submit)="register()">
 
                 <mat-form-field>
                     <input matInput placeholder="Name" formControlName="name">
