--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -53,11 +53,11 @@
                 <span class="text">OR</span>
             </div>
 
-            <button mat-raised-button class="google">
+            <button mat-raised-button class="google" (click)="socialLogin('google')">
                 Log in with Google
             </button>
 
-            <button mat-raised-button class="facebook">
+            <button mat-raised-button class="facebook" (click)="socialLogin('facebook')">
                 Log in with Facebook
             </button>
 
